[gd_scene load_steps=12 format=3 uid="uid://yympjaj4qw3"]

[ext_resource type="Script" uid="uid://tn7j80q5pvyo" path="res://GUI/MainMenu.gd" id="1_6btb2"]
[ext_resource type="PackedScene" uid="uid://bklv3nqbxi6ch" path="res://GUI/LevelButton.tscn" id="2_pxvd2"]
[ext_resource type="PackedScene" uid="uid://d23ech25rmlc" path="res://GUI/Settings.tscn" id="2_xskdj"]

[sub_resource type="Animation" id="Animation_fs0id"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_mfosu"]
resource_name = "move_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.420448, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1080)]
}

[sub_resource type="Animation" id="Animation_vbh3p"]
resource_name = "move_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.420448, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1920, 0)]
}

[sub_resource type="Animation" id="Animation_wjjlr"]
resource_name = "move_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1920, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_gsbnn"]
resource_name = "move_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.435275, 0.420448),
"update": 0,
"values": [Vector2(0, -1080), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_xskdj"]
resource_name = "move_right_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1920, 0)]
}

[sub_resource type="Animation" id="Animation_j2b6q"]
resource_name = "other_to_menu"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1920, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7g5pj"]
_data = {
&"RESET": SubResource("Animation_fs0id"),
&"move_down": SubResource("Animation_mfosu"),
&"move_left": SubResource("Animation_vbh3p"),
&"move_right": SubResource("Animation_wjjlr"),
&"move_right_right": SubResource("Animation_xskdj"),
&"move_up": SubResource("Animation_gsbnn"),
&"other_to_menu": SubResource("Animation_j2b6q")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6btb2")

[node name="LoadLevel" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a File"
initial_position = 1
size = Vector2i(638, 370)
ok_button_text = "Open"
dialog_hide_on_ok = true
dialog_close_on_escape = false
file_mode = 0
access = 1
use_native_dialog = true

[node name="SongImport" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a File"
initial_position = 1
size = Vector2i(638, 370)
ok_button_text = "Open"
dialog_hide_on_ok = true
dialog_close_on_escape = false
file_mode = 0
access = 2
use_native_dialog = true

[node name="LevelImport" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a File"
initial_position = 1
size = Vector2i(638, 370)
ok_button_text = "Open"
dialog_hide_on_ok = true
dialog_close_on_escape = false
file_mode = 0
access = 2
use_native_dialog = true

[node name="BG1" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.118581, 0.118581, 0.118581, 1)

[node name="InnerBG" type="ColorRect" parent="BG1"]
layout_mode = 2
offset_left = 50.0
offset_top = 50.0
offset_right = 1870.0
offset_bottom = 1030.0
color = Color(0.165656, 0.165656, 0.165656, 1)

[node name="BG2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 1920.0
offset_right = 3840.0
offset_bottom = 1080.0
color = Color(0.118581, 0.118581, 0.118581, 1)

[node name="InnerBG" type="ColorRect" parent="BG2"]
layout_mode = 2
offset_left = 50.0
offset_top = 50.0
offset_right = 1870.0
offset_bottom = 1030.0
color = Color(0.165656, 0.165656, 0.165656, 1)

[node name="BG3" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -1920.0
offset_bottom = 1080.0
color = Color(0.118581, 0.118581, 0.118581, 1)

[node name="InnerBG" type="ColorRect" parent="BG3"]
layout_mode = 2
offset_left = 50.0
offset_top = 50.0
offset_right = 1870.0
offset_bottom = 1030.0
color = Color(0.165656, 0.165656, 0.165656, 1)

[node name="MainMenu" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 225
text = "Go! Go! Go!"

[node name="PlayButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 65
text = "PLAY"

[node name="EditorButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 65
text = "EDITOR"

[node name="SettingsButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 65
text = "SETTINGS
"

[node name="LoadLevel" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 65
text = "OTHER"

[node name="QuitButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 65
text = "QUIT"

[node name="LevelLoading" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = -1920.0
offset_bottom = 1080.0
mouse_filter = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="LevelLoading"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="LevelLoading/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 125
text = "OTHER"
horizontal_alignment = 1

[node name="ImportLevel" type="Button" parent="LevelLoading/VBoxContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 65
text = "IMPORT LEVEL"

[node name="ImportSong" type="Button" parent="LevelLoading/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 65
text = "IMPORT SONG"

[node name="LoadLevelPlay" type="Button" parent="LevelLoading/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 65
text = "LOAD LEVEL N' PLAY"

[node name="LoadLevelEdit" type="Button" parent="LevelLoading/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 65
text = "LOAD LEVEL N' EDIT"

[node name="Popup" type="Label" parent="LevelLoading/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
horizontal_alignment = 1

[node name="Settings" parent="." instance=ExtResource("2_xskdj")]
layout_mode = 1
offset_top = 1080.0
offset_bottom = 1080.0

[node name="MainMenuButton" type="Button" parent="."]
layout_mode = 2
offset_left = 1992.0
offset_top = 72.0
offset_right = 2445.0
offset_bottom = 222.0
theme_override_font_sizes/font_size = 75
text = "MAIN MENU"

[node name="MainMenuButton2" type="Button" parent="."]
layout_mode = 2
offset_left = 72.0
offset_top = 1160.0
offset_right = 525.0
offset_bottom = 1310.0
theme_override_font_sizes/font_size = 75
text = "MAIN MENU"

[node name="MainMenuButton3" type="Button" parent="."]
layout_mode = 2
offset_left = -1848.0
offset_top = 72.0
offset_right = -1395.0
offset_bottom = 222.0
theme_override_font_sizes/font_size = 75
text = "MAIN MENU"

[node name="Levels" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 1920.0
offset_right = 3840.0
offset_bottom = 1080.0
mouse_filter = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 90

[node name="VBoxContainer" type="VBoxContainer" parent="Levels"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 15
alignment = 1

[node name="Label" type="Label" parent="Levels/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = "LEVELS"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Levels/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Level1" parent="Levels/VBoxContainer/HBoxContainer" instance=ExtResource("2_pxvd2")]
layout_mode = 2
text = "1"
level_id = 1

[node name="Level2" parent="Levels/VBoxContainer/HBoxContainer" instance=ExtResource("2_pxvd2")]
layout_mode = 2
text = "2"
level_id = 2

[node name="Level3" parent="Levels/VBoxContainer/HBoxContainer" instance=ExtResource("2_pxvd2")]
layout_mode = 2
text = "3"
level_id = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="Levels/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Level1" parent="Levels/VBoxContainer/HBoxContainer2" instance=ExtResource("2_pxvd2")]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Random 1"
level_id = 4

[node name="Level2" parent="Levels/VBoxContainer/HBoxContainer2" instance=ExtResource("2_pxvd2")]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Random 2"
level_id = 5

[node name="Level3" parent="Levels/VBoxContainer/HBoxContainer2" instance=ExtResource("2_pxvd2")]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Random 3"
level_id = 6

[node name="Controls" type="Label" parent="Levels"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 50
text = "Controls:
[WASD] or [Arrow Keys] to move, [R] to restart, [ESC] to pause
[Shift] to Dash while moving (move two spaces at once)
You have invincibility frames while dashing and moving
[ Survive to win! ]"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7g5pj")
}

[connection signal="file_selected" from="LoadLevel" to="." method="load_level"]
[connection signal="file_selected" from="SongImport" to="." method="import_song"]
[connection signal="file_selected" from="LevelImport" to="." method="import_level"]
[connection signal="pressed" from="MainMenu/VBoxContainer/PlayButton" to="." method="open_levels"]
[connection signal="pressed" from="MainMenu/VBoxContainer/EditorButton" to="." method="enter_level_editor"]
[connection signal="pressed" from="MainMenu/VBoxContainer/SettingsButton" to="." method="open_settings"]
[connection signal="pressed" from="MainMenu/VBoxContainer/LoadLevel" to="." method="go_to_other"]
[connection signal="pressed" from="MainMenu/VBoxContainer/QuitButton" to="." method="quit"]
[connection signal="pressed" from="LevelLoading/VBoxContainer/ImportLevel" to="." method="open_import_level"]
[connection signal="pressed" from="LevelLoading/VBoxContainer/ImportSong" to="." method="open_import_song"]
[connection signal="pressed" from="LevelLoading/VBoxContainer/LoadLevelPlay" to="." method="load_level_and_play"]
[connection signal="pressed" from="LevelLoading/VBoxContainer/LoadLevelEdit" to="." method="load_level_and_edit"]
[connection signal="pressed" from="MainMenuButton" to="." method="move_to_main_menu"]
[connection signal="pressed" from="MainMenuButton2" to="." method="move_up_to_main_menu"]
[connection signal="pressed" from="MainMenuButton3" to="." method="other_to_main_menu"]
