extends Control


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass


func enter_level_editor() -> void:
	pass # Replace with function body.


func open_levels() -> void:
	pass # Replace with function body.


func open_settings() -> void:
	pass # Replace with function body.
